# shared-api

./: pyproject.toml
app/: main.py
