[project]
name = "pubsub-fastapi"
version = "0.1.0"
description = "GCP Pub/Sub handler with FastAPI"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.110.0",
    "google-auth>=2.40.1",
    "google-cloud-compute>=1.30.0",
    "google-cloud-firestore>=2.21.0",
    "google-cloud-pubsub>=2.29.0",
    "python-jose>=3.5.0",
    "redis>=6.0.0",
    "structlog>=25.3.0",
    "typing>=3.10.0.0",
    "uvicorn>=0.29.0",
]
requires-python = ">=3.10"
