[project]
name = "pubsub-fastapi"
version = "0.1.0"
description = "GCP Pub/Sub handler with FastAPI"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.110.0",
    "google-auth>=2.40.1",
    "python-jose>=3.5.0",
    "structlog>=25.3.0",
    "typing>=3.10.0.0",
    "uvicorn>=0.29.0",
]
requires-python = ">=3.10"
